# bluth

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/bluth/: Cargo.toml
crates/bluth/examples/: datastar.md
crates/bluth/src/: datastar.rs  extractor.rs  html.rs  lib.rs  signal.rs
crates/bluth/src/tests/: attributes.rs  axum.rs  basic.rs  collections.rs  datastar.rs  formatting.rs  fragments.rs  mod.rs  url.rs
crates/bluth_macros/: Cargo.toml
crates/bluth_macros/src/: attributes.rs  codegen.rs  lib.rs
nix/devShells/: default.nix
