[package]
name = "bluth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative HTML rendering"
readme = "../../README.md"
keywords = ["html", "web", "template"]
categories = ["web-programming", "template-engine"]

[dependencies]
bluth_macros = { path = "../bluth_macros", version = "0.1.3", default-features = false }
axum = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = { version = "2.1", optional = true }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[features]
default = []
axum = ["dep:axum", "dep:urlencoding", "bluth_macros/axum"]
